<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_login"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="50dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atas"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        app:cardCornerRadius="42dp"
        app:cardElevation="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:background="@drawable/custom_editcard"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:paddingTop="60dp"
                android:paddingBottom="25dp"
                android:text="@string/login_page"
                android:textAlignment="center"
                android:textColor="@color/biru"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/title_card"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_editform"
                android:drawableStart="@drawable/baseline_supervisor_account_24"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif"
                android:hint="@string/login_username"
                android:padding="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="20dp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/username"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_editform"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="20dp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pass"
                android:paddingTop="4dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/register_here"
                android:paddingStart="45dp"
                android:textColor="@color/biru"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/biru"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/btn_login"
                android:textSize="15sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>