<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_register"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@id/guideline_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        app:cardCornerRadius="42dp"
        app:cardElevation="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:background="@drawable/custom_editcard"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:paddingTop="60dp"
                android:paddingBottom="25dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/biru"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/title_card"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_editform"
                android:drawableStart="@drawable/baseline_supervisor_account_24"
                android:drawablePadding="8dp"
                android:hint="@string/login_username"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="25dp"
                android:paddingEnd="20dp"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/username"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_editform"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/login_password"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="25dp"
                android:paddingEnd="20dp" />
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_editform"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="8dp"
                android:hint="@string/phone"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="25dp"
                android:paddingEnd="20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/phone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_editform"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="25dp"
                android:paddingEnd="20dp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:paddingTop="4dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/already_have_account_log_in"
                android:paddingStart="35dp"
                android:textColor="@color/biru"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/biru"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/btn_reg"
                android:textSize="15sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>